# agent_emulator

./: README.md
agent_emulator/: CMakeLists.txt  README.md  package.xml
agent_emulator/action/: GoTo.action
agent_emulator/config/: agent_list.yaml
agent_emulator/include/agent_emulator/: agent.hpp  agent_viz.hpp  carla_agent_viz.hpp  utils.hpp
agent_emulator/launch/: agents.rviz  agents_test.launch.py  carla_agents.launch.py
agent_emulator/meshes/: agent_mesh.stl  obstacle_marker.dae
agent_emulator/src/: send_goto_goal.py
agent_emulator/src/agent_emulator/: agent.cpp  agent_viz.cpp  carla_agent_viz.cpp
agent_emulator/srv/: SetAcceleration.srv  SetPose.srv  SetVelocity.srv
agent_velocity_controller/: CMakeLists.txt  README.md  package.xml
agent_velocity_controller/include/agent_velocity_controller/: random_acceleration_controller.hpp  random_velocity_controller.hpp  triangular_velocity_controller.hpp
agent_velocity_controller/src/: random_acceleration_controller.cpp  random_velocity_controller.cpp  triangular_velocity_controller.cpp
noisy_localization/: CMakeLists.txt  README.md  package.xml
noisy_localization/include/noisy_localization/: mvn.hpp  noise_variator.hpp  noisy_localization.hpp  noisy_odometry.hpp  noisy_platoon_localization.hpp  noisy_platoon_odometry.hpp  platoon_noise_variator.hpp  utils.hpp
noisy_localization/src/: noise_variator.cpp  noisy_localization.cpp  noisy_odometry.cpp  noisy_platoon_localization.cpp  noisy_platoon_odometry.cpp  platoon_noise_variator.cpp
